Done with Login and Register Components

--- a/4.Angular/Demo/src/app/test/test.component.html
+++ b/4.Angular/Demo/src/app/test/test.component.html
@@ -1,1 +1,17 @@
 <h1>Welcome to Test component</h1>
+
+<div>
+    Id : {{id}}  <br/>
+    name : {{name}}  <br/>
+    avg : {{avg}}  <br/><br><br>
+
+    <b><u>Address</u></b><br>
+    StreetNo : {{address.streetno}}<br>
+    City : {{address.city}}<br>
+    State : {{address.state}}
+    <br><br><br>
+    <b><u>Hobbies</u></b><br>
+    <ul>
+        <li *ngFor="let hobby of hobbies">{{hobby}}</li>
+    </ul>
+</div>
