--- a/4.Angular/Demo/src/app/app.component.html
+++ b/4.Angular/Demo/src/app/app.component.html
@@ -3,9 +3,19 @@
 
 <app-test2></app-test2>
 
-
 <app-login></app-login>
+
+<app-register></app-register>
+
+<app-employee></app-employee>
+
+<app-showempbyid></app-showempbyid>
 
 -->
 
-<app-register></app-register>
+<app-products></app-products>
+
+
+
+
+
