--- a/4.Angular/Demo/src/app/login/login.component.html
+++ b/4.Angular/Demo/src/app/login/login.component.html
@@ -1,3 +1,20 @@
-Enter EmailId: <input type="text"     name="emailId"  [(ngModel)]="emailId" /><br/>
-Enter Password:<input type="password" name="password" [(ngModel)]="password" /><br/>
-<button (click)="submit()">Login</button>
+<div>
+    <h2>Login Form</h2>
+
+    <form #loginForm="ngForm" (ngSubmit)="loginSubmit(loginForm.value)">
+        <table>
+            <tr>
+                <td>Enter EmailId</td>
+                <td><input type="text" name="emailId" ngModel /></td>
+            </tr>
+            <tr>
+                <td>Enter Password</td>
+                <td><input type="password" name="password" ngModel /></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><button>Login</button></td>
+            </tr>
+        </table>
+    </form>
+</div>
