--- a/4.Angular/Demo/src/app/app.component.html
+++ b/4.Angular/Demo/src/app/app.component.html
@@ -11,9 +11,12 @@
 
 <app-showempbyid></app-showempbyid>
 
+<app-products></app-products>
+
 -->
 
-<app-products></app-products>
+
+<app-login></app-login>
 
 
 
