Done with Toastr message

--- a/4.Angular/Demo/src/app/app.component.html
+++ b/4.Angular/Demo/src/app/app.component.html
@@ -16,7 +16,11 @@
 -->
 
 
-<app-login></app-login>
+<app-header></app-header>
+<br/>
+<marquee><h1 style="color: red;">Welcome to Angular Routing</h1></marquee>
+<br/>
+<router-outlet></router-outlet>
 
 
 
