--- a/4.Angular/Demo/src/app/products/products.component.html
+++ b/4.Angular/Demo/src/app/products/products.component.html
@@ -1,50 +1,22 @@
-<div class="container">
-    <h1>Mars Photos</h1>
-    <button class="btn btn-info" (click)="getMarsObjs()">get mars phots</button>
-     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <button class="btn btn-success" (click)="toggle()">{{btnData}}</button>
+<h3>Welcome {{emailId}}!</h3>
+<br>
+<h1 align="center">Products</h1> <br/>
 
-    <div *ngIf="flag; then success; else fail"></div>
-    <ng-template #success>
-        <div>
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>photoId</th>
-                        <th>camera name</th>
-                        <th>image</th>
-                        <th>rover</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor = "let item of marsObjects.photos">
-                        <td>{{item.id}}</td>
-                        <td>{{item.camera.name}}</td>
-                        <td><img [src]="item.img_src" width="100px" height="100px" alt="" /></td>
-                        <td>{{item.rover.name}}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </ng-template>
-    
-    <ng-template #fail>
-        <div class="d-flex flex-wrap">
-            <div *ngFor="let item of marsObjects.photos" style="width:200px" class="card m-3 p2">
-                <img class="card-img-top" [src]="item.img_src" alt="Card image cap" >
-                <div class="card-header">
-                    <h3>{{item.id}}</h3>
-                </div>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-3" *ngFor="let product of products">
+            <div class="card" style="width:300px;">
+                <img class="card-img-top" [src]="product.imgsrc" alt="Card image" style="width:100%; margin-top: 5px;">
                 <div class="card-body">
-                    <dl>
-                        <dt>Camara Name</dt>
-                        <dl>{{item.camera.full_name}}</dl>
-                        <dt>Rover Name</dt>
-                        <dl>{{item.rover.name}}</dl>
-                    </dl>
+                    <h4 class="card-title">{{product.name}}</h4>
+                    <p class="card-text">{{product.description}}</p>
+                    <p class="card-text"><b>Price: <s>₹45000/-</s> ₹{{product.price}}/- </b></p>
+                    <p align="right">
+                        <button class="btn btn-primary">AddToCart</button>
+                    </p>
                 </div>
             </div>
         </div>
-    </ng-template>
-
+    </div>
 </div>
+
