--- a/4.Angular/Demo/src/app/register/register.component.html
+++ b/4.Angular/Demo/src/app/register/register.component.html
@@ -1,3 +1,9 @@
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+</head>
 
 <div>
     <h2 align="center">Registration Form</h2>
@@ -5,72 +11,101 @@
     <form #registrationForm="ngForm" (ngSubmit)="registerSubmit(registrationForm.value)">
         <table align="center">
             <tr>
-                <td>Employee Name</td>
-                <td><input type="text" name="empName" ngModel required /></td>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                    <td><input type="text" class="form-control" placeholder="Enter empName" name="empName" ngModel
+                            required /></td>
+                </div>
+
             </tr>
             <tr>
-                <td>Salary</td>
-                <td><input type="text" name="salary" ngModel required /></td>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-inr"></i></span>
+                    <td><input type="text" class="form-control" placeholder="Enter salary" name="salary" ngModel
+                            required /></td>
+                </div>
             </tr>
             <tr>
-                <td>Gender</td>
-                <td>
-                    <select name="gender" ngModel required>
+
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-menu-down"></i></span>
+
+                    <select name="gender" class="form-control" ngModel required>
                         <option value="" selected>Select Gender</option>
                         <option value="Male">Male</option>
                         <option value="Female">Female</option>
                         <option value="Others">Others</option>
                     </select>
-                </td>
+                </div>
             </tr>
             <tr>
-                <td>Date Of Join</td>
-                <td><input type="date" name="doj" ngModel required /></td>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                    <td><input type="date" class="form-control" name="doj" ngModel required /></td>
+                </div>
             </tr>
             <tr>
-                <td>Country</td>
-                <td>
-                    <select name="country" ngModel >
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-flag"></i></span>
+
+                    <select name="country" class="form-control" ngModel>
                         <option value="" selected>Select Country</option>
-                        <option value="{{country.cca3}}" *ngFor="let country of countries">{{country.name.common}}</option>
+                        <option value="{{country.cca3}}" *ngFor="let country of countries">{{country.name.common}}
+                        </option>
+
                     </select>
-                </td>
+                </div>
             </tr>
+
             <tr>
-                <td>EmailId</td>
-                <td>
-                    <input type="text" name="emailId" ngModel #emailId="ngModel" required pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"  />
-                    <div *ngIf="emailId.invalid && (emailId.dirty || emailId.touched)" class="error" style="color: red;">
+
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+
+                    <input type="text" class="form-control" placeholder="Enter email" name="emailId" ngModel
+                        #emailId="ngModel" required pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" />
+                    <div *ngIf="emailId.invalid && (emailId.dirty || emailId.touched)" class="error"
+                        style="color: red;">
                         <div *ngIf="emailId.hasError('required')">Email is required.</div>
                         <div *ngIf="emailId.hasError('pattern')">Enter a valid email.</div>
                     </div>
-                </td>
+                </div>
+
             </tr>
             <tr>
-                <td>Mobile Number</td>
-                <td>
-                    <input type="text" name="mobileNumber" ngModel #mobileNumber="ngModel" required pattern="[6789]\d{9}" maxlength="10" />
-                    <div *ngIf="mobileNumber.invalid && (mobileNumber.dirty || mobileNumber.touched)" class="error" style="color: red;">
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+                    <input type="text" class="form-control" placeholder="Enter MobileNo" name="mobileNumber" ngModel
+                        #mobileNumber="ngModel" required pattern="[6789]\d{9}" maxlength="10" />
+                    <div *ngIf="mobileNumber.invalid && (mobileNumber.dirty || mobileNumber.touched)" class="error"
+                        style="color: red;">
                         <div *ngIf="mobileNumber.hasError('required')">Mobile Number is required.</div>
-                        <div *ngIf="mobileNumber.hasError('pattern')">Enter a valid 10-digit number starting with 6, 7, 8, or 9.</div>
+                        <div *ngIf="mobileNumber.hasError('pattern')">Enter a valid 10-digit number starting with 6, 7,
+                            8, or 9.</div>
                     </div>
-                </td>
+                </div>
             </tr>
             <tr>
-                <td>Password</td>
-                <td>
-                    <input type="password" name="password" ngModel #password="ngModel" required
-                           pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$" maxlength="10"  />
-                    <div *ngIf="password.invalid && (password.dirty || password.touched)" class="error" style="color: red;">
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                    <input type="password" class="form-control" placeholder="Enter password" name="password" ngModel
+                        #password="ngModel" required
+                        pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$" maxlength="10" />
+                    <div *ngIf="password.invalid && (password.dirty || password.touched)" class="error"
+                        style="color: red;">
                         <div *ngIf="password.hasError('required')" style="color: red;">Password is required.</div>
-                        <div *ngIf="password.hasError('pattern')" style="color: red;">Password must contain at least 8 characters, including 1 uppercase letter, 1 lowercase letter, 1 digit, and 1 special symbol.</div>
+                        <div *ngIf="password.hasError('pattern')" style="color: red;">Password must contain at least 8
+                            characters, including 1 uppercase letter, 1 lowercase letter, 1 digit, and 1 special symbol.
+                        </div>
                     </div>
-                </td>
+                </div>
             </tr>
             <tr>
-                <td></td>
-                <td>
-                    <button type="submit" [disabled]="registrationForm.invalid">Register</button>
+
+                <td class="text-center">
+                    <div>
+                        <button type="submit" [disabled]="registrationForm.invalid">Register</button>
+                    </div>
                 </td>
             </tr>
         </table>
