--- a/4.Angular/Demo/src/app/header/header.component.html
+++ b/4.Angular/Demo/src/app/header/header.component.html
@@ -31,6 +31,9 @@
             <form class="d-flex">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
+                        <a class="nav-link" routerLink="cart">Cart({{cartItems.length}})</a>
+                    </li> 
+                    <li class="nav-item">
                         <a class="nav-link" routerLink="logout">Logout</a>
                     </li>
                 </ul>
