--- a/4.Angular/Demo/src/app/header/header.component.html
+++ b/4.Angular/Demo/src/app/header/header.component.html
@@ -27,6 +27,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="products">Products</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="image">ImageUpload</a>
+                </li>
             </ul>
             <form class="d-flex">
                 <ul class="navbar-nav me-auto">
