--- a/4.Angular/Demo/src/app/employee/employee.component.html
+++ b/4.Angular/Demo/src/app/employee/employee.component.html
@@ -1,65 +1,128 @@
+<head>
+  <link rel="stylesheet" 
+  href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" 
+  integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" 
+  crossorigin="anonymous">
+</head>
+
+
 <h3>Welcome {{emailId}}!</h3>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-<br>
-<h1>Employees Details</h1>
-<div>
-    <table border="2px">
-        <thead>
-            <tr>
-                <th>empId</th>
-                <th>empName</th>
-                <th>salary</th>
-                <th>gender</th>
-                <th>doj</th>
-                <th>country</th>
-                <th>emailId</th>
-                <th>experience</th>
-                <th class="bg-info text-white" colspan="2" align="center">Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let emp of employees">
-                <td>{{emp.empId }}</td>
-                <td>{{emp.empName | gender: emp.gender | uppercase}}</td>
-                <td>{{emp.salary | currency:"INR"}}</td>
-                <td>{{emp.gender | lowercase}}</td>
-                <td>{{emp.doj | date:'dd-MMM-yyyy'}}</td>
-                <td>{{emp.country}}</td>
-                <td>{{emp.emailId}}</td>
-                <td>{{emp.doj | exp}}</td>
-                <td> <button (click)="editEmployee(emp)" class="glyphicon glyphicon-pencil"></button></td>
-                <td> <button (click)="deleteEmployee(emp)" class="glyphicon glyphicon-trash"></button> 
-            </tr>
-        </tbody>
-    </table>
+
+<h1 align="center">Employees Data</h1>
+<br/>
+<div align="center" class="container">
+  <table class="table table-hover table-striped table-sm table-bordered">
+      <thead>
+          <tr align="center">
+              <th class="bg-info text-white">EmpId</th>
+              <th class="bg-info text-white">EmpName</th>
+              <th class="bg-info text-white">Salary</th>
+              <th class="bg-info text-white">Gender</th>
+              <th class="bg-info text-white">DateOfJoin</th>
+              <th class="bg-info text-white">Country</th>
+              <th class="bg-info text-white">Email-Id</th>
+              <th class="bg-info text-white">Experience</th>
+              <th class="bg-info text-white" colspan="2" align="center">Actions</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr *ngFor="let emp of employees" align="center">
+              <td> {{emp.empId                                    }} </td>
+              <td> {{emp.empName  | gender:emp.gender | uppercase }} </td>
+              <td> {{emp.salary   | currency:"INR"                }} </td>
+              <td> {{emp.gender   | lowercase                     }} </td>
+              <td> {{emp.doj      | date:'dd-MMM-yyyy'            }} </td>
+              <td> {{emp.country                                  }} </td>
+              <td> {{emp.emailId                                  }} </td>
+              <td> {{emp.doj      | exp                           }} </td>
+              <td> <button (click)="editEmployee(emp)"   class="glyphicon glyphicon-pencil"></button></td>
+              <td> <button (click)="deleteEmployee(emp)" class="glyphicon glyphicon-trash"> </button> </td>
+          </tr>
+      </tbody>
+  </table>
 </div>
 
 
 
 
-<!-- Add the following Code for Modal Dialog Box -->
 <div class="container">   
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" role="dialog">
-      <div class="modal-dialog">
-      
-        <!-- Modal content-->
-        <div class="modal-content">
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
 
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title"><b>Update Employee</b></h4>
-          </div>
+        <div class="modal-header">
+          <h4 class="modal-title"><b>Update Employee</b></h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
 
-          <div class="modal-body">
-            <p>Some text in the modal.</p>
-          </div>
+        <div class="modal-body">
+          <table align="center">
+              <tr>
+                  <td>EmpId</td>
+                  <td><input type="text" name="empId" [(ngModel)]="editEmp.empId" readonly  /></td>
+              </tr>
+              <tr>
+                  <td>EmpName</td>
+                  <td><input type="text" name="empName" [(ngModel)]="editEmp.empName" /></td>
+              </tr>
+              <tr>
+                  <td>Salary</td>
+                  <td><input type="text" name="salary"  [(ngModel)]="editEmp.salary" /></td>
+              </tr>
+              <tr>
+                  <td>Gender</td>
+                  <td>
+                      <select name="gender"  [(ngModel)]="editEmp.gender" >
+                          <option value="" selected>Select Gender</option>
+                          <option value="Male">Male</option>
+                          <option value="Female">Female</option>
+                          <option value="Others">Others</option>
+                      </select>
+                  </td>
+              </tr>
+              
+              <tr>
+                  <td>DateOfJoin</td>
+                  <td><input type="date" name="doj"  [(ngModel)]="editEmp.doj" /></td>
+              </tr>
+              
+              <tr>
+                  <td>Country</td>
+                  <td>
+                      <select name="country"  [(ngModel)]="editEmp.country" >
+                          <option value="" selected>Select Country</option>
+                          <option value="{{country.cca3}}" *ngFor="let country of countries">{{country.name.common}}</option>
+                      </select>
+                  </td>
+              </tr>
+              <tr>
+                  <td>EmailId</td>
+                  <td><input type="text" name="emailId"  [(ngModel)]="editEmp.emailId" /></td>
+              </tr>
+              <tr>
+                  <td>Password</td>
+                  <td><input type="password" name="password"  [(ngModel)]="editEmp.password" readonly /></td>
+              </tr>
+              <tr>
+                  <td>Department</td>
+                  <td>
+                      <select name="department"  [(ngModel)]="editEmp.department.deptId" >
+                          <option value="" selected>Select Department</option>
+                          <option value="{{department.deptId}}" *ngFor="let department of departments">{{department.deptName}}</option>
+                      </select>
+                  </td>
+              </tr>
+          </table>
+        </div>
 
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Update Employee</button>
-          </div>
+        <div class="modal-footer">
+          <button type="button" (click)="updateEmployee()" class="btn btn-default" data-dismiss="modal">Update Employee</button>
+        </div>
 
-        </div>        
-      </div>
-    </div>    
-  </div>
+      </div>        
+    </div>
+  </div>    
+</div>
