Observable is done

--- a/4.Angular/Demo/src/app/header/header.component.html
+++ b/4.Angular/Demo/src/app/header/header.component.html
@@ -13,10 +13,10 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="login">Login</a>
+                    <a class="nav-link" [class.disabled]="loginStatus" routerLink="login">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="register">Register</a>
+                    <a class="nav-link" [class.disabled]="loginStatus" routerLink="register">Register</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="showemps">ShowEmployees</a>
@@ -37,7 +37,7 @@
                         <a class="nav-link" routerLink="cart">Cart({{cartItems.length}})</a>
                     </li> 
                     <li class="nav-item">
-                        <a class="nav-link" routerLink="logout">Logout</a>
+                        <a class="nav-link" [class.disabled]="!loginStatus" routerLink="logout">Logout</a>
                     </li>
                 </ul>
             </form>
